My hobbies address path correction

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   </table>
 
 
-    <a href="C:\Users\asus\Desktop\Web Development\HTML Personal Site\hobbies.html">My Hobbies</a>
+    <a href="hobbies.html">My Hobbies</a>
 
     <br><a href="ContactMe.html">Contact Me</a><br>
 </body>
